# EZVK

./: .gitignore  Abstract  CMakeLists.txt  CMakeUserPresets.json  Desired  Info.txt  README.md  Todo.txt  conanfile.txt  todo.txt
.cache/clangd/index/: Camera.cpp.204F5E907D012E40.idx  Device.cpp.B0BAAF86CEDECA04.idx  Device.h.8B4E8790C3190ADC.idx  EkImages.cpp.2674579027E4DE27.idx  EkImages.hpp.611D700681E99CA8.idx  EkMesh.cpp.0E2A40BC35B5C5BC.idx  EkPipeline.cpp.D8C737977D2E01BA.idx  EkPipeline.hpp.8DB7BD8B336F6196.idx  EkRenderpass.cpp.DA0E4C1AFB023907.idx  EkRenderpass.hpp.93FB20BAB5C2F90D.idx  EkTypes.hpp.BB658D6860D8849F.idx  EkVulkan.cpp.74A8D6498F04F0A1.idx  EkVulkan.hpp.88FE0720567678EE.idx  EkWindow.cpp.8CCA4D442439443D.idx  EkWindow.hpp.5637F45C9007C8F3.idx  ExtImgQuery.cpp.C41A6EC7E015A319.idx  ExternalImporter.cpp.FBEA05AD61733D37.idx  ExternalResources.cpp.952ADD8FE6046FA8.idx  Instance.cpp.061C0559525CD9C0.idx  Instance.h.0E47438B8AD1FF02.idx  PhysicalDevice.cpp.E63BB011F90D08A6.idx  PhysicalDevice.h.4057CBBCA69FEDD3.idx  Render.cpp.592D46CA98F45342.idx  main.cpp.AFB8EB7F2B7922B2.idx
Codec/: CMakeLists.txt  Encode  main.cpp
Examples/: CMakeLists.txt  ExtImgQuery.cpp  ExternalImporter.cpp  ExternalResources.cpp  ImgQuery.h  Render.cpp
Ideas/: todo.txt
Shaders/: CMakeLists.txt  Frag.glsl  ImgFrag.glsl  ImgVert.glsl  Vert.glsl
Tools/: EnumStringProducer.py  Input.txt  Output.txt
include/: EkHelpers.hpp  EkImages.hpp  EkPipeline.hpp  EkRenderpass.hpp  EkSwapchain.hpp  EkTypes.hpp  EkWindow.hpp  VkBootstrap.h
src/: CMakeLists.txt  EkHelpers.cpp  EkImages.cpp  EkPipeline.cpp  EkRenderpass.cpp  EkSwapchain.cpp  Mesh.cpp  main.cpp
src/Base/: Device.cpp  Device.h  EkHelpers.cpp  EkHelpers.hpp  EkTypes.hpp  EkVulkan.cpp  EkVulkan.hpp  EkWindow.cpp  EkWindow.hpp  Instance.cpp  Instance.h  PhysicalDevice.cpp  PhysicalDevice.h
src/Camera/: Camera.hpp
src/Images/: EkImages.cpp  EkImages.hpp
src/Meshes/: EkMesh.cpp  EkMesh.hpp
src/Rendering/: EkPipeline.cpp  EkPipeline.hpp  EkRenderpass.cpp  EkRenderpass.hpp
src/Testbuild/: CMakeCache.txt  Makefile  cmake_install.cmake
src/sail/include/: config.h  test-images.h
src/sail/src/bindings/c++/: Makefile  cmake_install.cmake  libsail-c++.pc  libsail-c++.so.0  libsail-c++.so.0.7.1
src/sail/src/libsail/: Makefile  SailConfig.cmake  cmake_install.cmake  libsail.pc  libsail.so.0  libsail.so.0.8.0
src/sail/src/libsail-common/: Makefile  SailCommonConfig.cmake  cmake_install.cmake  libsail-common.pc  libsail-common.so.0  libsail-common.so.0.9.2
src/sail/src/libsail-manip/: Makefile  cmake_install.cmake  libsail-manip.pc  libsail-manip.so.0  libsail-manip.so.0.3.0
src/sail/src/sail-codecs/: Makefile  cmake_install.cmake
src/sail/src/sail-codecs/avif/: Makefile  cmake_install.cmake
src/sail/src/sail-codecs/bmp/: Makefile  cmake_install.cmake
src/sail/src/sail-codecs/common/bmp/: Makefile  cmake_install.cmake
src/sail/src/sail-codecs/gif/: Makefile  cmake_install.cmake
src/sail/src/sail-codecs/ico/: Makefile  cmake_install.cmake
src/sail/src/sail-codecs/jpeg/: Makefile  cmake_install.cmake  sail-codec-jpeg.codec.info
src/sail/src/sail-codecs/jpeg2000/: Makefile  cmake_install.cmake
src/sail/src/sail-codecs/pcx/: Makefile  cmake_install.cmake
src/sail/src/sail-codecs/png/: Makefile  cmake_install.cmake  sail-codec-png.codec.info
src/sail/src/sail-codecs/psd/: Makefile  cmake_install.cmake
src/sail/src/sail-codecs/qoi/: Makefile  cmake_install.cmake
src/sail/src/sail-codecs/svg/: Makefile  cmake_install.cmake
src/sail/src/sail-codecs/tga/: Makefile  cmake_install.cmake
src/sail/src/sail-codecs/tiff/: Makefile  cmake_install.cmake  sail-codec-tiff.codec.info
src/sail/src/sail-codecs/wal/: Makefile  cmake_install.cmake
src/sail/src/sail-codecs/webp/: Makefile  cmake_install.cmake
src/sail/src/sail-codecs/xbm/: Makefile  cmake_install.cmake
